# aws-greengrass-component-sdk

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES.md  flake.nix
cpp/: .clang-format  .clang-tidy  CMakeLists.txt
docs/: BUILD.md
misc/: dictionary.txt
mock/: mock.c
python/: CMakeLists.txt  gg_sdk.pyi  pyproject.toml
python/samples/: delete_thing_shadow.json  delete_thing_shadow.py  get_configuration.json  get_configuration.py  get_thing_shadow.json  get_thing_shadow.py  list_named_shadows_for_thing.json  list_named_shadows_for_thing.py  publish_to_iot_core.json  publish_to_iot_core.py  publish_to_topic.json  publish_to_topic.py  restart_component.json  restart_component.py  subscribe_to_config_update.json  subscribe_to_config_update.py  subscribe_to_iot_core.json  subscribe_to_iot_core.py  subscribe_to_topic.json  subscribe_to_topic.py  update_configuration.json  update_configuration.py  update_state.json  update_state.py  update_thing_shadow.json  update_thing_shadow.py
python/src/: gg_sdk_module.c
rust/: .gitignore  Cargo.toml  build.rs  wrapper.h
rust/examples/: create_local_deployment.json  create_local_deployment.rs  delete_thing_shadow.json  delete_thing_shadow.rs  get_configuration.json  get_configuration.rs  get_thing_shadow.json  get_thing_shadow.rs  list_named_shadows_for_thing.json  list_named_shadows_for_thing.rs  publish_to_iot_core.json  publish_to_iot_core.rs  publish_to_topic.json  publish_to_topic.rs  restart_component.json  restart_component.rs  subscribe_to_config_update.json  subscribe_to_config_update.rs  subscribe_to_iot_core.json  subscribe_to_iot_core.rs  subscribe_to_topic.json  subscribe_to_topic.rs  update_configuration.json  update_configuration.rs  update_state.json  update_state.rs  update_thing_shadow.json  update_thing_shadow.rs
rust/src/: buffer.rs  error.rs  ipc.rs  lib.rs  object.rs
rust/src/private/: log.rs  mod.rs
samples/: README.md  create_local_deployment.c  create_local_deployment.json  delete_thing_shadow.c  delete_thing_shadow.json  get_configuration.c  get_configuration.json  get_thing_shadow.c  get_thing_shadow.json  list_named_shadows_for_thing.c  list_named_shadows_for_thing.json  publish_to_iot_core.json  publish_to_topic.c  publish_to_topic.json  restart_component.c  restart_component.json  subscribe_to_iot_core.json  update_state.c  update_state.json  update_thing_shadow.c  update_thing_shadow.json
src/: arena.c  backoff.c  base64.c  buffer.c  crc32.c  error.c  file.c  json_encode.c  log-trail.c  log.c  map_canonical.c  object.c  trace.c  (+2 more)
(+124 files in other folders)
