[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "gg-sdk"
version = "0.1.0"
description = "Python bindings for the AWS IoT Greengrass Component SDK"
requires-python = ">=3.9"
license = "Apache-2.0"

[tool.scikit-build]
cmake.build-type = "Release"
