[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "gg-sdk"
version = "0.1.0"
description = "Python bindings for the AWS IoT Greengrass Component SDK"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["aws", "greengrass", "iot"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Repository = "https://github.com/aws-greengrass/aws-greengrass-component-sdk"

[tool.scikit-build]
cmake.build-type = "Release"
