[package]
name = "gg-sdk"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/aws/aws-greengrass-component-sdk"
description = "Lightweight AWS IoT Greengrass SDK"
readme = "../README.md"
keywords = ["aws", "greengrass", "iot"]
categories = ["api-bindings"]
include = [
    "src/",
    "examples/",
    "build.rs",
    "wrapper.h",
    "include/",
    "priv_include/",
    "csrc/",
    "mock/",
]

[build-dependencies]
bindgen = "0.72.1"
cc = "1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
libc = "0.2"
